[package]
name = "config_convert"
version = "0.1.0"
authors = ["neepoo <neepoowzk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
toml = "0.5"
serde_yaml = "0.8"
clap = "3.0.0-beta.2"
serde = "1.0"
anyhow = "1.0"
